# AI-News

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  开发指导.md
.cursor/rules/: superpowers.mdc
.github/workflows/: ci.yml
backend/: alembic.ini  celerybeat-schedule
backend/app/: __init__.py  config.py  main.py
backend/app/analyzers/: __init__.py  analyzer.py  embedding_client.py  llm_client.py  prompts.py
backend/app/api/: __init__.py  actions.py  articles.py  auth.py  callbacks.py  deps.py  health.py  push_logs.py  schemas.py  sources.py  user_actions.py
backend/app/collectors/: __init__.py  arxiv.py  base.py  hackernews.py  html.py  jiqizhixin.py  rss.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/middleware/: auth.py
backend/app/notifiers/: __init__.py  base.py  cards.py  feishu.py
backend/app/scheduler/: celery_app.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_analyzer.py  test_auth.py  test_feishu.py  test_hackernews_collector.py  test_health.py  test_html_collector.py  test_llm_client.py  test_llm_json_parsing.py  test_quiet_hours.py  test_rss_collector.py  test_semantic_dedup.py
docs/: 下一步优先级-临时.md  开发进度.md  需求文档.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  sidebar.tsx
frontend/lib/: api.ts  auth.ts
ops/: Dockerfile.backend
scripts/: __init__.py  seed_sources.py
scripts/html_sources/: lobsters.yaml
(+18 files in other folders)
