[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news"
version = "0.3.0"
description = "AI 资讯智能聚合与推送系统"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "litellm>=1.50",
    "openai>=1.40",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "orjson>=3.10",
    "PyJWT>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-pyyaml",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["B008", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"backend/migrations/**/*.py" = ["E501"]
"backend/tests/**/*.py" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
